--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karan Homeo Pharmacy</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Karan Homeo Pharmacy | Trusted Homeopathy in Ludhiana</title>
+    <meta name="title" content="Karan Homeo Pharmacy | Trusted Homeopathy in Ludhiana">
+    <meta name="description" content="Karan Homeo Pharmacy offers expert homeopathy treatment in Ludhiana. Book appointments, get consultations, and order remedies online. Natural healing, trusted care.">
+    <meta name="keywords" content="Homeopathy, Homeopathy in Ludhiana, Homeo Clinic, Best Homeo Doctor, Natural Healing, Karan Homeo Pharmacy, Homeopathy Treatment, Online Homeopathy">
+    <meta name="author" content="Karan Homeo Pharmacy">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://karan-homeo-pharmacy.vercel.app/">
+    <meta property="og:title" content="Karan Homeo Pharmacy | Trusted Homeopathy in Ludhiana">
+    <meta property="og:description" content="Natural and effective homeopathic treatment in Ludhiana. Visit Karan Homeo Pharmacy for expert consultation.">
+    <meta property="og:image" content="https://karan-homeo-pharmacy.vercel.app/your-thumbnail.jpg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://karan-homeo-pharmacy.vercel.app/">
+    <meta name="twitter:title" content="Karan Homeo Pharmacy | Trusted Homeopathy in Ludhiana">
+    <meta name="twitter:description" content="Book expert homeopathy consultations at Karan Homeo Pharmacy. Natural and holistic healing.">
+    <meta name="twitter:image" content="https://karan-homeo-pharmacy.vercel.app/your-thumbnail.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://karan-homeo-pharmacy.vercel.app/" />
+
+    <!-- Local Business Schema Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MedicalClinic",
+      "name": "Karan Homeo Pharmacy",
+      "image": "https://karan-homeo-pharmacy.vercel.app/your-thumbnail.jpg",
+      "url": "https://karan-homeo-pharmacy.vercel.app/",
+      "telephone": "+91 7986834022",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Sua Road, near new railway phatak, Bhai Himmat Singh Nagar, Lapar Market, Baba Deep Singh Nagar",
+        "addressLocality": "Ludhiana",
+        "addressRegion": "Punjab",
+        "postalCode": "141013",
+        "addressCountry": "IN"
+      }
+    }
+    </script>
+
+    <!-- Entry point script -->
+    <script type="module" src="/src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
