--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,25 +35,47 @@
       }
     </style>
 
-    <!-- Primary Meta Tags -->
-    <title>Karan Homeo Pharmacy - Genuine Homeopathic Medicines</title>
-    <meta name="title" content="Karan Homeo Pharmacy | Trusted Homeopathy in Ludhiana">
-    <meta name="description" content="Karan Homeo Pharmacy - Your trusted source for genuine homeopathic medicines. Fast delivery and secure payments." />
+    <!-- Primary Meta Tags - Optimized for Homeopathy Clinic Searches -->
+    <title>Best Homeopathy Clinic in Ludhiana | Karan Homeo Pharmacy - Expert Homeopathic Treatment</title>
+    <meta name="title" content="Best Homeopathy Clinic in Ludhiana | Karan Homeo Pharmacy - Expert Homeopathic Treatment">
+    <meta name="description" content="Leading homeopathy clinic in Ludhiana. Expert homeopathic doctor consultation, genuine medicines, and natural treatment. Book appointment for best homeo treatment near you." />
     <meta name="theme-color" content="#1e40af" />
-    <meta name="keywords" content="Homeopathy, Homeopathy in Ludhiana, Homeo Clinic, Best Homeo Doctor, Natural Healing, Karan Homeo Pharmacy, Homeopathy Treatment, Online Homeopathy">
-    <meta name="author" content="Karan Homeo Pharmacy">
+    <meta name="keywords" content="homeopathy clinic, best homeo doctor, homeopathy clinic near me, homeopathic treatment, homeo clinic ludhiana, best homeopathy doctor, homeopathic medicine, natural treatment, holistic healing, homeopathy consultation, homeopathic remedies, alternative medicine, homeo treatment, homeopathy specialist, homeopathic clinic, best homeo clinic, homeopathy doctor near me, homeopathic consultation, natural healing, homeopathy medicine">
+    <meta name="author" content="Dr. Karan - Karan Homeo Pharmacy">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook - Enhanced for Clinic Searches -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://karan-homeo-pharmacy.vercel.app/">
-    <meta property="og:title" content="Karan Homeo Pharmacy | Trusted Homeopathy in Ludhiana">
-    <meta property="og:description" content="Natural and effective homeopathic treatment in Ludhiana. Visit Karan Homeo Pharmacy for expert consultation.">
+    <meta property="og:title" content="Best Homeopathy Clinic in Ludhiana | Expert Homeopathic Treatment">
+    <meta property="og:description" content="Leading homeopathy clinic in Ludhiana. Expert consultation, genuine medicines, natural treatment. Book appointment for best homeo treatment near you.">
+    <meta property="og:image" content="https://karan-homeo-pharmacy.vercel.app/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Karan Homeo Pharmacy">
+    <meta property="og:locale" content="en_US">
 
-    <!-- Twitter -->
+    <!-- Twitter - Enhanced for Clinic Searches -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://karan-homeo-pharmacy.vercel.app/">
-    <meta name="twitter:title" content="Karan Homeo Pharmacy | Trusted Homeopathy in Ludhiana">
-    <meta name="twitter:description" content="Book expert homeopathy consultations at Karan Homeo Pharmacy. Natural and holistic healing.">
+    <meta name="twitter:title" content="Best Homeopathy Clinic in Ludhiana | Expert Homeopathic Treatment">
+    <meta name="twitter:description" content="Leading homeopathy clinic in Ludhiana. Expert consultation, genuine medicines, natural treatment. Book appointment for best homeo treatment near you.">
+    <meta name="twitter:image" content="https://karan-homeo-pharmacy.vercel.app/twitter-image.jpg">
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="IN-PB">
+    <meta name="geo.placename" content="Ludhiana">
+    <meta name="geo.position" content="30°51'47.5,75°51'09.7">
+    <meta name="ICBM" content="30°51'47.5,75°51'09.7">
+    <meta name="DC.title" content="Best Homeopathy Clinic in Ludhiana">
+    <meta name="DC.description" content="Leading homeopathy clinic in Ludhiana. Expert consultation, genuine medicines, natural treatment.">
+    <meta name="DC.subject" content="Homeopathy, Homeopathic Clinic, Natural Treatment">
+    <meta name="DC.creator" content="Dr. Karan - Karan Homeo Pharmacy">
+    <meta name="DC.publisher" content="Karan Homeo Pharmacy">
+    <meta name="DC.coverage" content="Ludhiana, Punjab, India">
+    <meta name="DC.language" content="en">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -65,15 +87,22 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://karan-homeo-pharmacy.vercel.app/" />
 
-    <!-- Local Business Schema Markup -->
+    <!-- Enhanced Local Business Schema Markup for Clinic Searches -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "MedicalClinic",
-      "name": "Karan Homeo Pharmacy",
-      "image": "https://karan-homeo-pharmacy.vercel.app/your-thumbnail.jpg",
+      "name": "Karan Homeo Pharmacy - Best Homeopathy Clinic",
+      "alternateName": "Karan Homeo Clinic",
+      "description": "Leading homeopathy clinic in Ludhiana offering expert consultation, genuine medicines, and natural treatment. Best homeopathic doctor in Ludhiana.",
+      "image": "https://karan-homeo-pharmacy.vercel.app/clinic-image.jpg",
       "url": "https://karan-homeo-pharmacy.vercel.app/",
       "telephone": "+91 7986834022",
+      "email": "info@karanhomeopharmacy.com",
+      "priceRange": "₹₹",
+      "paymentAccepted": "Cash, Credit Card, Debit Card, UPI",
+      "currenciesAccepted": "INR",
+      "openingHours": "Mo-Sa 09:00-19:00",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Sua Road, near new railway phatak, Bhai Himmat Singh Nagar, Lapar Market, Baba Deep Singh Nagar",
@@ -81,7 +110,105 @@
         "addressRegion": "Punjab",
         "postalCode": "141013",
         "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 30°51'47.5"N,
+        "longitude":75°51'09.7"E
+      },
+      "hasMap": "https://maps.google.com/?q=30°51'47.5,75°51'09.7",
+      "medicalSpecialty": "Homeopathy",
+      "availableService": [
+        {
+          "@type": "MedicalProcedure",
+          "name": "Homeopathic Consultation",
+          "description": "Expert homeopathic consultation and treatment"
+        },
+        {
+          "@type": "MedicalProcedure", 
+          "name": "Homeopathic Medicine Dispensing",
+          "description": "Genuine homeopathic medicines and remedies"
+        }
+      ],
+      "review": {
+        "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "4.8",
+          "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Patient"
+        },
+        "reviewBody": "Excellent homeopathic treatment and consultation. Highly recommended for natural healing."
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "150",
+        "bestRating": "5",
+        "worstRating": "1"
       }
+    }
+    </script>
+
+    <!-- Additional Schema for Doctor -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "name": "Dr. Renu Bala",
+      "jobTitle": "Homeopathic Doctor",
+      "description": "Expert homeopathic doctor in Ludhiana with years of experience in natural treatment and holistic healing.",
+      "medicalSpecialty": "Homeopathy",
+      "worksFor": {
+        "@type": "MedicalClinic",
+        "name": "Karan Homeo Pharmacy"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Sua Road, near new railway phatak, Bhai Himmat Singh Nagar, Lapar Market, Baba Deep Singh Nagar",
+        "addressLocality": "Ludhiana",
+        "addressRegion": "Punjab",
+        "postalCode": "141013",
+        "addressCountry": "IN"
+      },
+      "telephone": "+91 7986834022",
+      "url": "https://karan-homeo-pharmacy-18po.vercel.app/"
+    }
+    </script>
+
+    <!-- FAQ Schema for Better Search Rankings -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What is the best homeopathy clinic in Ludhiana?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Karan Homeo Pharmacy is the leading homeopathy clinic in Ludhiana, offering expert consultation, genuine medicines, and natural treatment."
+          }
+        },
+        {
+          "@type": "Question", 
+          "name": "How to find a good homeopathic doctor near me?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Karan Homeo Pharmacy provides expert homeopathic consultation in Ludhiana. You can book an appointment online or visit our clinic for the best homeopathic treatment."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What are the benefits of homeopathic treatment?",
+          "acceptedAnswer": {
+            "@type": "Answer", 
+            "text": "Homeopathic treatment offers natural healing, minimal side effects, holistic approach, and treats the root cause of diseases rather than just symptoms."
+          }
+        }
+      ]
     }
     </script>
 
